# seqan

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  ChangeLog.rst  LICENSE  README  README.md  README.rst  cpplint.py
apps/alf/: CMakeLists.txt  INFO  LICENSE  README  alf.cpp
apps/bs_tools/: CMakeLists.txt  INFO  LICENSE  README  README.bisar  README.casbar  bisar.cpp  bisar.h  bisar_base.h  bisar_score.h  bisar_score_data.h  casbar.cpp  casbar.h  casbar_alphabets.h  casbar_calling.h  casbar_consensus_realign.h  casbar_realignment.h  casbar_score.h  casbar_score_data.h  casbar_util.h  four2three.cpp  four2three.h
apps/dfi/: CMakeLists.txt  README  dfi.cpp
apps/fiona/: CMakeLists.txt  README  compute_gain.cpp  error_rate_from_sam.cpp  fiona.cpp  index_qgram_parallel.h
apps/flexbar++/: CMakeLists.txt  adapter_trimming.h  adapter_trimming.h.orig  demultiplex.h  flexbar++.cpp  flexbar++.h  flexlib.cpp  general_processing.h  general_stats.h  helper_functions.h  read.h  read_processor.h  read_reader.h  read_trimming.h  read_writer.h  semaphore.h  test_adapter.cpp  test_demultiplex.cpp  test_general_processing.cpp
apps/fx_tools/: CMakeLists.txt  INFO  LICENSE  fx_bam_coverage.cpp  fx_fastq_stats.cpp  fx_read_depth.cpp  fx_variant_density.cpp
apps/gustaf/: CMakeLists.txt  INFO  LICENSE  README  README.md  README.rst  create_stellarmatches_from_file.h  gustaf.cpp  gustaf_matepairs.h  join_mates.cpp  msplazer.h  msplazer_algorithms.h  msplazer_main.h  msplazer_out.h  msplazer_parse_options.h  stellar_routines.h
apps/insegt/: CMakeLists.txt  README  base.h  create_gff.h  fusion.h  insegt.cpp  overlap_module.h
apps/mason2/: CMakeLists.txt  INFO  LICENSE  README  README.mason_frag_sequencing  README.mason_genome  README.mason_materializer  README.mason_methylation  README.mason_methylation.levels.md  README.mason_simulator  README.mason_splicing  README.mason_variator  TODO  external_split_merge.cpp  external_split_merge.h  fragment_generation.h  genomic_variants.cpp  genomic_variants.h  individual_genome.h  mason_frag_sequencing.cpp  mason_genome.cpp  mason_materializer.cpp  mason_methylation.cpp  mason_options.cpp  mason_options.h  mason_simulator.cpp  mason_splicing.cpp  mason_tests.cpp  mason_types.h  mason_variator.cpp  methylation_levels.cpp  methylation_levels.h  omp_wrapper.h  sequencing.h  simulate_454.cpp  simulate_base.cpp  simulate_genome.cpp  simulate_genome.h  simulate_illumina.cpp  simulate_sanger.cpp  (+3 more)
apps/micro_razers/: CMakeLists.txt  LICENSE  README  micro_razers.cpp  outputFormat.h
apps/ngs_roi/: CMakeLists.txt  LICENSE  README  bam2roi.cpp  bam2roi.h  mktargz.sh  png_canvas.h  project_interval.cpp  project_interval.h  project_spliced.cpp  project_spliced.h  record_ext.h  roi_builder.cpp  roi_builder.h  roi_feature_projection.cpp  roi_plot_thumbnails.cpp  version.h
apps/pair_align/: CMakeLists.txt  LICENSE  README  pair_align.cpp
apps/param_chooser/: CMakeLists.txt  LICENSE  param_chooser.cpp  test_param_chooser.cpp
apps/rabema/: CMakeLists.txt  INFO  README  curve_smoothing.h  do_search.cpp  find_hamming_simple_ext.h  find_myers_ukkonen_ext.h  find_myers_ukkonen_reads.h  io_gsi.h  prepare_sam.cpp  rabema.cpp  rabema.h  rabema_build_gold_standard.cpp  rabema_evaluate.cpp  rabema_stats.h  ref_id_mapping.h  sorting.h
apps/razers/: CMakeLists.txt  README  outputFormat.h  paramChooser.h  param_tabs.cpp  param_tabs.h  razers.cpp  razers.h  razers_matepairs.h  razers_spliced.h  readSimulator.h
apps/razers3/: CMakeLists.txt  INFO  README  compPHSens.cpp  job_queue.h  outputFormat.h  parallel_job_queue.h  parallel_misc.h  parallel_store.h  paramChooser.h  param_tabs.cpp  param_tabs.h  profile_timeline.h  quality2prob.cpp  razers.cpp  razers.h  razers_match_filter.h  razers_matepairs.h  razers_matepairs_parallel.h  razers_paired_match_filter.h  razers_parallel.h  razers_window.h  readSimulator.h  simulate_reads.cpp
apps/rep_sep/: CMakeLists.txt  LICENSE  assembly_parser.h  column_scanner.h  rep_sep.cpp  rgraph.h  rgraph_base.h  rgraph_construction.h  rgraph_heuristics.h  rgraph_score.h  utils.h
apps/sak/: CMakeLists.txt  INFO  LICENSE  README  sak.cpp
apps/sam2matrix/: CMakeLists.txt  INFO  LICENSE  sam2matrix.cpp
apps/samcat/: CMakeLists.txt  INFO  README  README.md  bamsort.cpp  samcat.cpp
apps/searchjoin/: CMakeLists.txt  INFO  LICENSE  README  db.h  finder.h  join.cpp  search.cpp  verifier.h  writer.h
apps/seqan_tcoffee/: CMakeLists.txt  LICENSE  README  seq.fa  seqan_tcoffee.cpp
apps/seqcons2/: CMakeLists.txt  INFO  LICENSE  README  seqcons.cpp  seqcons_app.cpp  seqcons_app.h  seqcons_options.cpp  seqcons_options.h
apps/sgip/: CMakeLists.txt  INFO  LICENSE  README  sgip.cpp  sgip.h  sgip_base.h  sgip_output.h
core/: CMakeLists.txt
core/apps/: CMakeLists.txt
core/demos/: LICENSE  alignment.cpp  alignment_local.cpp  alphabet.cpp  annotation_converter.cpp  arg_align.cpp  arg_parse.cpp  bamutil.cpp  benchmark_stream.cpp  benchmark_stream_write.cpp  cyclic_shape.cpp  cyclic_shape.cpp.stdout  cyclic_shape_snippets.cpp  ecoln.out  enumerate_strings.cpp  example_seq_io.cpp  file_format.cpp  file_readwrite.cpp  file_speed.cpp  filter_sam.cpp  fixed_cyclic_shape.cpp  fixed_cyclic_shape.cpp.stdout  generic_cyclic_shape.cpp  generic_cyclic_shape.cpp.stdout  graph_algo_lcs.cpp  graph_algo_path_bellmanford.cpp  graph_algo_scc.cpp  graph_algo_tree_kruskal.cpp  graph_algo_tree_prim.cpp  graph_hmm.cpp  graph_hmm_silent.cpp  index_find_stringset.cpp  index_lcp.cpp  index_maxrepeats.cpp  index_mummy.cpp  index_qgram_counts.cpp  index_supermaxrepeats.cpp  interval_tree.cpp  iterator.cpp  knime_node.cpp  (+14 more)
core/include/: seqan.h
core/tests/: CMakeLists.txt
docs/: CMakeLists.txt  dddoc.js  dddoc.py  dddoc_docu.txt  dddoc_html.py  dddoc_tex.py  main.py  make.bat  make.sh  test_dddoc.py
dox/: CMakeLists.txt  config.ini  dox_only.sh  dox_only.sh.in  run.sh  run.sh.in
extras/: CMakeLists.txt
sandbox/: CMakeLists.txt
(+7983 files in other folders)
